objects/Stage_extend_Quantify__c.object
<CustomObject>
    <fields>
        <fullName>Date_of_Initial_Cost_Estimate__c</fullName>
        <label>Date of Initial Cost Estimate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Revised_Estimate__c</fullName>
        <label>Date of Revised Estimate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_year_recurring_cost__c</fullName>
        <label>First year recurring cost</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IT_Risk__c</fullName>
        <label>IT Risk</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initial_Cost_Estimate__c</fullName>
        <label>Initial Cost Estimate</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Technology_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Technology Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_license_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New license required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Asset__c</fullName>
        <label>Primary Asset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Strategic_Alignment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Strategic Alignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Release_Stage_ID__c</fullName>
        <label>Stage ID</label>
        <referenceTo>Release_Stage__c</referenceTo>
        <relationshipLabel>Stage extend Quantify</relationshipLabel>
        <relationshipName>Stage_extend_Quantify</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Revised_Cost_Estimate__c</fullName>
        <label>Revised Cost Estimate</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Risk_Mitigation_Proposal__c</fullName>
        <label>Risk Mitigation Proposal</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Secondary_Asset__c</fullName>
        <label>Secondary Asset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skills_needed__c</fullName>
        <label>Skills needed</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Special_Skills_Mitigation__c</fullName>
        <label>Special Skills Mitigation</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Special_Skills_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special Skills Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technology_needed__c</fullName>
        <label>Technology needed</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Stage extend Quantify</label>
    <nameField>
        <displayFormat>SEQ-{000000000}</displayFormat>
        <label>Stage extend Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stage extend Quantify</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>